# dma-spoofer

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs
src/core/: dma.rs  mod.rs
src/spoofers/arp/: offsets.rs  spoofer.rs
src/spoofers/efi/: shellcode.rs  spoofer.rs
src/spoofers/gpu/: nvidia.rs
src/spoofers/monitor/: dxgkrnl.rs
src/spoofers/smbios/: mod.rs  offsets.rs  resolver.rs  spoofer.rs
src/spoofers/usb/: spoofer.rs
src/spoofers/volume/: mod.rs  offsets.rs  resolver.rs  spoofer.rs
