[package]
name = "dma-spoofer"
version = "0.1.0"
edition = "2021"
authors = ["Vibhek Soni"]
description = "Dma hwid spoofer implementation in Rust by Vibhek Soni"
repository = "https://github.com/vibheksoni/dma-spoofer"
license = "MIT"

[dependencies]
anyhow = "1.0"
libloading = "0.8"
memprocfs = "5.17"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
winapi = { version = "0.3", features = ["minwindef", "consoleapi", "processenv", "winbase"] }

[profile.release]
opt-level = 3
lto = true
strip = true
